--- a/infra/package.json
+++ b/infra/package.json
@@ -6,7 +6,9 @@
         "typescript": "^5.0.0"
     },
     "dependencies": {
+        "@pulumi/aws": "^7.16.0",
         "@pulumi/kubernetes": "^4.0.0",
-        "@pulumi/pulumi": "^3.113.0"
+        "@pulumi/pulumi": "^3.113.0",
+        "dotenv": "^17.2.3"
     }
 }
