--- a/autoscaler/package.json
+++ b/autoscaler/package.json
@@ -5,14 +5,19 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.972.0",
+        "@aws-sdk/client-ec2": "^3.973.0",
+        "@aws-sdk/lib-dynamodb": "^3.972.0",
         "@types/node": "^25.0.9",
         "axios": "^1.13.2",
+        "dotenv": "^17.2.3",
         "ts-node": "^10.9.2",
         "typescript": "^5.9.3"
     }
