--- a/autoscaler/package.json
+++ b/autoscaler/package.json
@@ -1,9 +1,9 @@
 {
     "name": "autoscaler",
     "version": "1.0.0",
-    "type": "module",
+    "type": "commonjs",
     "description": "",
-    "main": "index.js",
+    "main": "dist/index.js",
     "scripts": {
         "build": "tsc",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,7 +14,10 @@
     "dependencies": {
         "@aws-sdk/client-dynamodb": "^3.972.0",
         "@aws-sdk/client-ec2": "^3.973.0",
+        "@aws-sdk/client-s3": "^3.975.0",
         "@aws-sdk/lib-dynamodb": "^3.972.0",
+        "@kubernetes/client-node": "^1.4.0",
+        "@types/aws-lambda": "^8.10.160",
         "@types/node": "^25.0.9",
         "axios": "^1.13.2",
         "dotenv": "^17.2.3",
